force-app/main/default/objects/Origin__c/Origin__c.object-meta.xml
<CustomObject>
    <label>Origin</label>
    <nameField>
        <label>Origin</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Origins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>