force-app/main/default/objects/Origin__c/fields/Copypaste_Data__c.field-meta.xml
<CustomField>
    <fullName>Copypaste_Data__c</fullName>
    <label>Copypaste Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>