force-app/main/default/objects/Origin__c/fields/NameWoDiacritics__c.field-meta.xml
<CustomField>
    <fullName>NameWoDiacritics__c</fullName>
    <label>NameWoDiacritics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>