force-app/main/default/objects/Origin__c/fields/UNCode__c.field-meta.xml
<CustomField>
    <fullName>UNCode__c</fullName>
    <label>UNCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>