force-app/main/default/objects/Origin__c/fields/UNFunction__c.field-meta.xml
<CustomField>
    <fullName>UNFunction__c</fullName>
    <label>UNFunction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>